Add permission to active tab

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,11 +6,14 @@
   "manifest_version": 2,
   "browser_action": {
     "default_popup": "index.html",
-    "default_title": "Open BDD Tests Generator"
+    "default_title": "BDD Tests Generator"
   },
   "icons": {
     "16": "logo192.png",
     "48": "logo192.png",
     "128": "logo192.png"
-  }
+  },
+  "permissions": [
+    "activeTab"
+  ]
 }
