--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "short_name": "BDD TG",
   "name": "BDD Tests Generator",
   "description": "BDD Tests Generator Chrome Extension",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "manifest_version": 3,
   "action": {
     "default_popup": "index.html",
@@ -13,10 +13,8 @@
     "48": "logo192.png",
     "128": "logo192.png"
   },
-  "minimum_chrome_version": "92",
   "background": {
-    "service_worker": "background.js",
-    "type": "module"
+    "service_worker": "background.js"
   },
   "content_scripts": [
     {
