--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,6 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
 
 # production
 /build
@@ -14,10 +9,7 @@
 # misc
 .idea
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.parcel-cache
 
 npm-debug.log*
 yarn-debug.log*
