--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bdd-tests-generator",
-  "version": "1.3.0",
+  "version": "2.0.0",
   "private": true,
   "dependencies": {
     "@types/file-saver": "^2.0.5",
@@ -9,6 +9,7 @@
     "@types/react-dom": "^18.0.7",
     "file-saver": "^2.0.5",
     "moment": "^2.29.4",
+    "openai": "^4.17.3",
     "parcel": "^2.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,6 +19,8 @@
     "build": "sh ./build.sh"
   },
   "devDependencies": {
-    "@types/chrome": "^0.0.200"
+    "@types/chrome": "^0.0.200",
+    "buffer": "^5.5.0",
+    "process": "^0.11.10"
   }
 }
